--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 
 <body>
 <!-- 定义加载时候的动作 -->
-<div id="app">Loading...</div>
+<div id="app">请稍等。。预计还需2秒。。</div>
 <nav>
-    <a href="Https://C2307.github.io">主站</a>
     <a href="Https://luogu.com.cn">洛谷</a>
     <a href="Https://florr.io">Florr.io</a>
-    <a href="/Boink_.html">???</a>
 </nav>
 <script>
     window.$docsify = {
@@ -72,7 +70,7 @@
             margin: '10px',
             float: 'right',
             fontsize:'0.9em',
-            color:'rgb(90,90,90)',
+            color:'rgb(119,136,153)',
             language:'chinese',
             isExpected: true
         }
