--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="app">请稍等。。预计还需2秒。。</div>
 <nav>
     <a href="Https://luogu.com.cn">洛谷</a>
-    <a href="Https://florr.io">Florr.io</a>
+    <a href="/Boink_.html">???</a>
 </nav>
 <script>
     window.$docsify = {
