--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-
 <head>
     <meta charset="UTF-8">
     <title>清锦</title>
@@ -13,9 +12,8 @@
 
 <body>
 <!-- 定义加载时候的动作 -->
-<div id="app">请稍等。。预计还需2秒。。</div>
+<div id="app">请稍等…</div>
 <nav>
-    <a href="Https://luogu.com.cn">洛谷</a>
     <a href="/Boink_.html">???</a>
 </nav>
 <script>
@@ -39,8 +37,8 @@
         // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级（建议配置为2-4）
         subMaxLevel: 3,
         // 小屏设备下合并导航栏到侧边栏
-        mergeNavbar: true,
-        auto2top: true,
+        mergeNavbar: false,
+        auto2top: false,
         //Latex设置
         latex: {
             inlineMath   : [['$', '$'], ['\\(', '\\)']],
@@ -100,7 +98,7 @@
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
 <!--字数统计-->
-<script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+<!--<script src="//unpkg.com/docsify-count/dist/countable.js"></script>-->
 
 
 </body>
