--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+    <style>
+        @font-face {
+            font-family: "腾讯体 W7";
+            src: url(/TencentSansW7.ttf);
+        }
+    </style>
     <meta charset="UTF-8">
     <title>清锦</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -14,7 +20,7 @@
 <!-- 定义加载时候的动作 -->
 <div id="app">请稍等…</div>
 <nav>
-    <a href="/Boink_.html">???</a>
+
 </nav>
 <script>
     window.$docsify = {
@@ -24,6 +30,7 @@
         //repo: ,
         // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
         loadSidebar: false,
+        onlyCover: true,
         sidebarDisplayLevel: 1,
         alias: {
             '/.*/_sidebar.md': '/_sidebar.md'
