--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <style>
+
+
+    <style media="screen, print">
         @font-face {
-            font-family: "腾讯体 W7";
-            src: url(/TencentSansW7.ttf);
+            font-family: "Unifont";
+            src: url("/unifont-14.0.01.woff2") format('woff2');
         }
+
+        body {font-family: "Unifont"}
     </style>
     <meta charset="UTF-8">
     <title>清锦</title>
+    <meta name="keywords" content="清锦，清华附中，清华附中合肥学校，清锦班，清锦官网，C2307，清合，清华附中C2307，合肥C2307，清华附中合肥学校C2307，C23">
+    <meta name="description" content="我们是清华附中合肥学校C23级的一个小集体，你好。">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport"
