--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style media="screen, print">
         @font-face {
             font-family: "Unifont";
-            src: url("/unifont-14.0.01.woff2") format('woff2');
+            src: url("/unifont-14.0.01.woff2");
         }
 
         body {font-family: "Unifont"}
