Update index.html for verifiy baidu

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-
+    <meta name="baidu-site-verification" content="codeva-ZnyowAMkeS" />
 
     <style media="screen, print">
         @font-face {
