--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <meta name="baidu-site-verification" content="codeva-ZnyowAMkeS" />
-
     <style media="screen, print">
         @font-face {
             font-family: "Unifont";
@@ -20,6 +18,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
+
+    <meta name="baidu-site-verification" content="codeva-bFAQEhuETb" />
 </head>
 
 <body>
