--- a/gitalk.html
+++ b/gitalk.html
@@ -17,8 +17,8 @@
 <div id="gitalk-container"></div>
 <script>
     var gitalk = new Gitalk({
-        clientID: 'Ov23liXXpXm2u9VpNXJb', // clientID
-        clientSecret: '920c2bd17e61a78b8008e0563933a2d0e4564773', // clientSecret
+        clientID: 'Ov23livyDs0enaMDBnlZ', // clientID
+        clientSecret: '1acc820fe700e251a06aef8ae08c1b19a3f02d9b', // clientSecret
         repo: 'gitalk-com', // 评论仓库名
         owner: 'C2307',
         admin: ['C2307'], // 管理人
