--- a/gitalk.html
+++ b/gitalk.html
@@ -24,7 +24,7 @@
         admin: ['C2307','One1528'], // 管理人
         id: location.pathname, // 返回当前 URL 的路径部分作为id
         language:'zh-CN', // 语言
-        distractionFreeMode: false  // 无干扰模式
+        distractionFreeMode: true// 无干扰模式
     })
     gitalk.render('gitalk-container')
 </script>
