--- a/gitalk.html
+++ b/gitalk.html
@@ -17,14 +17,14 @@
 <div id="gitalk-container"></div>
 <script>
     var gitalk = new Gitalk({
-        clientID: 'Ov23livyDs0enaMDBnlZ', // clientID
+            clientID: 'Ov23livyDs0enaMDe/ clientID
         clientSecret: '1acc820fe700e251a06aef8ae08c1b19a3f02d9b', // clientSecret
         repo: 'gitalk-com', // 评论仓库名
         owner: 'C2307',
-        admin: ['C2307','One1528'], // 管理人
+        admin: ['C2307'], // 管理人
         id: location.pathname, // 返回当前 URL 的路径部分作为id
         language:'zh-CN', // 语言
-        distractionFreeMode: true// 无干扰模式
+        distractionFreeMode: false  // 无干扰模式
     })
     gitalk.render('gitalk-container')
 </script>
