--- a/你好.html
+++ b/你好.html
@@ -8,6 +8,6 @@
     </script>
 </head>
 <body>
-<p>正在重定向… <a href="https://lanzoui.com/iM4ve2m1mvva">https://lanzoui.com/iM4ve2m1mvva</a></p>
+<p>Loading...颅 <a href="https://lanzoui.com/iM4ve2m1mvva">https://lanzoui.com/iM4ve2m1mvva</a></p>
 </body>
 </html>
