--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <meta name="baidu-site-verification" content="codeva-bFAQEhuETb" />
-
     <style media="screen, print">
         @font-face {
             font-family: "Unifont";
@@ -15,9 +13,9 @@
     <link rel="icon" href="images/favicon.ico">
     <title>清锦</title>
     <meta name="description" content="我们是清华附中合肥学校C23级的一个小集体，你好。">
-    <meta name="keywords" content="清锦，清华附中，清华附中合肥学校，清锦班，清锦官网，C2307，清合，清华附中C2307，合肥C2307，清华附中合肥学校C2307，C23">
+    <meta name="keywords" content="清锦, 清华附中, 清华附中合肥学校, 清锦班, 清锦官网, C2307, 清合, 清华附中C2307, 合肥C2307, 清华附中合肥学校C2307, C23">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="description" content="Description">
+    <meta name="description" content="清锦">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
