--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         div1.onclick = function() {
             if (a === 0) {
                 var neww = window.open('_blank');
-                neww.location = "http://www.baidu.com";
+                neww.location = "https://tuo.hfc2307.top/";
                 a++;
             } else {
                 this.style.display = "none";
