Update Chat Website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
     init({
         el: '#waline',
-        serverURL: 'https://www.hfc2307.asia',
+        serverURL: 'https://chat.hfc2307.top',
     });
 </script>
 <style type="text/css">
